# j-svm

./: .gitignore  README.md  normal_multi_svm.py  normal_svm.py  normal_svm_jax.py  pyproject.toml  run_JSVM.py  run_SVM.py
JSVM/: MultiSupportVectorMachine.py  SupportVectorMachine.py  __init__.py
SVM/: MultiSupportVectorMachine.py  SupportVectorMachine.py
core/: SVMParameter.py  __init__.py
data/: DataUnit.py  IrisDataset.py  __init__.py  functional.py
example/: data_set_all_plus.py  normal_multi_svm.py  normal_multi_svm_jax.py  normal_svm.py  normal_svm_jax.py  sample_jax_code.py  sample_jax_code_2.py
profile/: README.md
utils/: __init__.py  test_utils.py
