[tool.poetry]
name = "j-svm"
version = "0.1.0"
description = ""
authors = ["keithlin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
jax = "^0.6.0"
cvxpy = "^1.6.5"
pandas = "^2.2.3"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
