[tool.poetry]
name = "j-svm"
version = "0.1.0"
description = ""
authors = ["keithlin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
jax = {extras = ["cuda12"], version = "^0.6.0"}
cvxpy = "^1.6.5"
pandas = "^2.2.3"
black = "^25.1.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
matplotlib = "^3.10.3"
jaxtyping = "^0.3.2"
cvxpylayers = "^0.1.9"
joblib = "^1.5.0"
jaxopt = "^0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
